--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.0"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/shoppingCart.png"
+  adaptive_icon_background: "#fc612d"
+  adaptive_icon_foreground: "assets/icons/shoppingCart.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
